# site-evolution-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agent-design/: AGENT_INTAKE.md
agents/code-analysis/: README.md
agents/comparative-research/: README.md
agents/feature-recommender/: README.md
agents/orchestrator/: README.md
agents/quality-audit/: README.md
agents/tech-feasibility/: README.md
config/: analysis-config.example.yml
src/sea/: __init__.py  __main__.py  cli.py  config.py
src/sea/agents/: __init__.py  base.py
src/sea/agents/code_analysis/: __init__.py  agent.py  prompts.py  tools.py
src/sea/agents/comparative_research/: __init__.py  agent.py  prompts.py  tools.py
src/sea/agents/feature_recommender/: __init__.py  agent.py  prompts.py
src/sea/output/: dashboard.py  markdown.py
src/sea/schemas/: __init__.py  code_analysis.py  config.py  feasibility.py  pipeline.py  quality.py  recommendations.py  research.py  tech_stack.py  ux_design.py
src/sea/shared/: __init__.py  browser.py  claude_client.py  codebase_reader.py  progress.py
tests/: conftest.py  test_base_agent.py  test_claude_client.py  test_codebase_reader.py  test_config.py  test_dashboard.py  test_output.py  test_pipeline_schemas.py  test_schemas.py
tests/fixtures/: evolution-dashboard.html  evolution-report.md  executive-summary.txt  report.json
tests/test_agents/: test_code_analysis.py  test_comparative_research.py  test_feature_recommender.py  test_orchestrator.py  test_quality_audit.py  test_tech_feasibility.py  test_tech_stack_advisor.py
(+19 files in other folders)
