[project]
name = "site-evolution-agents"
version = "0.1.0"
description = "Multi-agent system for analyzing websites and producing evolution recommendations"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "typer[all]>=0.15",
    "rich>=13.9",
    "playwright>=1.50",
    "jinja2>=3.1",
    "httpx>=0.28",
    "pathspec>=0.12",
    "python-dotenv>=1.2.1",
    "openai>=2.24.0",
]

[project.scripts]
sea = "sea.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sea"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
